# LawyerAI

Backend/: README.md  UI_proto.py  pyproject.toml  requirements.txt  test.ipynb
Backend/app/: deps.py  main.py  rag_service.py  schemas.py  voice_service.py
Backend/app/routes/: text_response.py
Backend/ingest/: check_data.py  embed_store.py  load_data.py  preprocess.py  search_sample.py
Backend/ingest/data/: The_Delhi_Rent_Act_1995.docx  ~$e_Delhi_Rent_Act_1995.docx
Backend/qdrant_storage/: raft_state.json
Backend/qdrant_storage/collections/indian_law/0/: newest_clocks.json  replica_state.json
Backend/qdrant_storage/collections/indian_law/0/segments/05716f94-174d-4af5-a329-ea9fa10437e0/payload_index/: IDENTITY  LOG  MANIFEST-000009
Backend/qdrant_storage/collections/indian_law/0/segments/0f2b014b-0744-437d-a5c0-6564a983c577/payload_index/: IDENTITY  LOG  MANIFEST-000009
Backend/qdrant_storage/collections/indian_law/0/segments/20b40f96-7bfa-46f8-bcb4-2c7c4f07acd1/payload_index/: IDENTITY  LOG  MANIFEST-000009
Backend/qdrant_storage/collections/indian_law/0/segments/4e08cdf4-1d99-4da2-849b-1ce5a8672fd7/: mutable_id_tracker.mappings
Backend/qdrant_storage/collections/indian_law/0/segments/4e08cdf4-1d99-4da2-849b-1ce5a8672fd7/payload_index/: IDENTITY  LOG  MANIFEST-000009
Backend/qdrant_storage/collections/indian_law/0/segments/f67d7e3d-e307-4383-bcd1-ad1a9527c2f5/payload_index/: IDENTITY  LOG  MANIFEST-000009
Backend/qdrant_storage/collections/indian_law/0/segments/fd051990-43d5-4343-97e8-d5d8b4efc733/payload_index/: IDENTITY  LOG  MANIFEST-000009
(+28 files in other folders)
