[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.111.0",
    "numpy>=1.24.0",
    "openai>=1.30.0",
    "pydantic==1.10.13",
    "pydub==0.25.1",
    "python-multipart==0.0.9",
    "qdrant-client==1.7.3",
    "sentence-transformers==2.7.0",
    "soundfile==0.12.1",
    "torch>=1.13.0",
    "uvicorn[standard]==0.30.0",
]
